--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { text-align: center; }
-    .attribution a {  text-decoration: none;}
+    .attribution a {  color: black ; text-decoration: none;}
   </style>
 </head>
 <body>
@@ -35,10 +35,12 @@
     </div>
 
     <div class="subscribe-email">
-      <input type="email" placeholder="Your email address">
-      <button class="notify-me">Notify Me</button>
+      <input type="email" placeholder="Your email address" id="email">
+      
+      <button class="notify-me" onclick="notifyMe()">Notify Me</button>
+      <p class="error-message" id="error-message">Please provide a valid email address</p>
     </div>
-
+    
     <div>
       <img src="./images/illustration-dashboard.png" alt="illustration">
     </div>
@@ -49,6 +51,8 @@
       </div>
       &copy; Copyright Ping. All rights reserved.
     </footer>
+
+    <script src="script.js"></script>
 
   </main>
   
